--- a/package.json
+++ b/package.json
@@ -227,6 +227,7 @@
     "decimal.js": "^10.6.0",
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
+    "exceljs": "^4.4.0",
     "express": "^4.22.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.1",
