docs: Add feature-gate pattern documentation [AGENT-0022]
- Updated .env.example with clear LOCAL TESTING NOTE explaining 501 behavior
- Added FEATURE-GATED markers to S3 and module sections
- Created docs/guides/FEATURE_GATES.md explaining the pattern
- Documented all feature-gated endpoints and their requirements

This explains why some endpoints return 501 locally but work in production:
- S3 storage routes require AWS credentials
- Email routes require SendGrid API key
- Marketplace/ATS modules require feature flags

Verification: typecheck/lint 0 errors

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,25 @@
 # Copy this file to .env.local for development
 # For production, configure these in your hosting platform (Vercel, AWS, etc.)
 # =============================================================================
+#
+# ⚠️  LOCAL TESTING NOTE - FEATURE-GATED ENDPOINTS
+# =============================================================================
+# Some API endpoints return HTTP 501 (Not Implemented) when their backing
+# service is not configured. This is INTENTIONAL design (feature-gate pattern):
+#
+# | Feature          | Required Variables                            | If Missing    |
+# |------------------|-----------------------------------------------|---------------|
+# | S3 File Upload   | AWS_S3_BUCKET, AWS_ACCESS_KEY_ID, etc.        | Returns 501   |
+# | Email (SendGrid) | SENDGRID_API_KEY or SEND_GRID                 | Returns 501   |
+# | Marketplace      | MARKETPLACE_ENABLED=true                      | Returns 501   |
+# | ATS Job Feeds    | ATS_ENABLED=true                              | Returns 501   |
+# | GraphQL API      | graphql-yoga package installed                | Returns 501   |
+#
+# In PRODUCTION (Vercel), these are configured. Locally, you may see 501s
+# for features you don't need to test. This is expected behavior.
+#
+# See: docs/guides/FEATURE_GATES.md for full documentation
+# =============================================================================
 
 # === NODE ENVIRONMENT ===
 NODE_ENV=development
@@ -198,7 +217,16 @@ MEILI_MAX_ATTEMPTS=3
 MEILI_RETRY_DELAY_MS=400
 
 # === S3-COMPATIBLE STORAGE (Media & Documents) ===
+# ⚠️  FEATURE-GATED: Upload routes return 501 if not configured
 # AWS S3, Cloudflare R2, MinIO, etc.
+#
+# PRODUCTION (Vercel secrets - already configured):
+#   AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_S3_BUCKET, AWS_REGION
+#
+# LOCAL DEVELOPMENT (optional - only if testing uploads):
+#   Use LocalStack, MinIO, or real AWS credentials
+#
+# Legacy naming (Souq marketplace):
 S3_ENDPOINT=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
@@ -516,10 +544,14 @@ DATADOG_SITE=datadoghq.com
 # CACHING (Redis - Optional for Distributed Rate Limiting)
 # =============================================================================
 # =============================================================================
-# MODULE CONTROL (Dynamic Import System)
+# MODULE CONTROL (Dynamic Import System) — FEATURE GATES
 # =============================================================================
+# ⚠️  FEATURE-GATED: Disabled modules return HTTP 501 with clear error messages
 # Set to 'false' or remove to disable specific modules
-# Disabled modules return HTTP 501 with clear error messages
+#
+# In PRODUCTION (Vercel): MARKETPLACE_ENABLED=true and ATS_ENABLED=true are set
+# In LOCAL DEV: Set these to 'true' if you need to test those modules
+#
 WO_ENABLED=true              # Work Orders module
 INVOICE_ENABLED=true         # Invoicing module  
 PROPERTY_ENABLED=true        # Property Management (Aqar) module
@@ -532,8 +564,8 @@ SUPPORT_ENABLED=true         # Support Tickets module
 SUPPORT_PUBLIC_ORG_ID=
 # Enable anonymous incident reporting (unauthenticated users can submit diagnostics)
 ENABLE_ANONYMOUS_INCIDENTS=false
-MARKETPLACE_ENABLED=true     # Marketplace module
-ATS_ENABLED=true             # Applicant Tracking System module
+MARKETPLACE_ENABLED=true     # Marketplace module (501 if false)
+ATS_ENABLED=true             # Applicant Tracking System module (501 if false)
 
 # =============================================================================
 # FEATURE FLAGS
