feat(ci): add TODO/FIXME marker gate to prevent untracked incomplete code [AGENT-0029]
- Added scripts/check-todo-markers.js to detect untracked TODO/FIXME
- Integrated into ci-fast-lane.yml (warning mode during rollout)
- Added pnpm scripts: guard:todos, guard:todos:changed
- Acceptable patterns: [ISSUE-XXX], [AGENT-XXXX], [BUG-XXX], BLOCKED:, SKIPPED:, P0-P3

Addresses AI Improvement Analysis:
- 'Add CI gate for new TODO/FIXME markers (Med impact, Low effort)'

--- a/.github/workflows/ci-fast-lane.yml
+++ b/.github/workflows/ci-fast-lane.yml
@@ -54,6 +54,10 @@ jobs:
       
       - name: Run ESLint
         run: pnpm lint
+
+      - name: Check TODO/FIXME markers
+        run: node scripts/check-todo-markers.js --changed
+        continue-on-error: true  # Warn but don't fail during rollout
       
       - name: Run tests (changed files only)
         run: pnpm vitest run --changed HEAD~1 --reporter=dot
