--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "lint:ci": "npm run lint:prod && npm run lint:inventory-org && npm run rbac:client:check && npm run lint:rbac && npm run typecheck && npm run guard:placeholders && npm run guard:admin-checks && pnpm vitest run tests/unit/security/banned-literals.test.ts",
     "guard:placeholders": "node scripts/guard-placeholders.js",
     "guard:admin-checks": "node scripts/guard-admin-checks.js",
+    "guard:todos": "node scripts/check-todo-markers.js",
+    "guard:todos:changed": "node scripts/check-todo-markers.js --changed",
     "qa:preflight": "bash scripts/repo-sanity-check.sh",
     "qa:guards": "node scripts/guard-placeholders.js && node scripts/guard-admin-checks.js",
     "qa:tests": "pnpm vitest run --reporter=verbose",
