fix(ci): Add MongoDB binary caching to prevent race conditions in sharded tests [AGENT-0034]
- ci-full-suite.yml: Add MongoMemoryServer cache + pre-download for server/client tests
- fixzit-quality-gates.yml: Add MongoMemoryServer cache + pre-download before unit tests
- qa.yml: Add MongoMemoryServer cache + pre-download before vitest runs

This fixes ENOENT errors when multiple CI shards try to download MongoDB binary simultaneously.

--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -78,6 +78,22 @@ jobs:
               ;;
           esac
 
+      # Cache MongoMemoryServer binaries to prevent race conditions in tests
+      - name: Cache MongoMemoryServer binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/mongodb-binaries
+          key: ${{ runner.os }}-mongodb-binaries-7.0.24
+          restore-keys: |
+            ${{ runner.os }}-mongodb-binaries-
+
+      # Pre-download MongoDB binary before tests start
+      - name: Pre-download MongoDB binary
+        shell: bash
+        run: npx mongodb-memory-server-core --download-only
+        env:
+          MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
+
       # ---------- Phase 2 Canonical Rules ----------
       - name: Validate waivers schema
         shell: bash
