--- a/.github/workflows/ci-full-suite.yml
+++ b/.github/workflows/ci-full-suite.yml
@@ -88,6 +88,21 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
+      # Cache MongoMemoryServer binaries to prevent race conditions in sharded tests
+      - name: Cache MongoMemoryServer binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/mongodb-binaries
+          key: ${{ runner.os }}-mongodb-binaries-7.0.24
+          restore-keys: |
+            ${{ runner.os }}-mongodb-binaries-
+      
+      # Pre-download MongoDB binary to avoid race condition between shards
+      - name: Pre-download MongoDB binary
+        run: npx mongodb-memory-server-core --download-only
+        env:
+          MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
+      
       - name: Run server tests (shard ${{ matrix.shard }})
         run: pnpm vitest run --project=server --shard=${{ matrix.shard }} --reporter=dot --coverage
         env:
@@ -126,6 +141,21 @@ jobs:
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+      
+      # Cache MongoMemoryServer binaries to prevent race conditions in sharded tests
+      - name: Cache MongoMemoryServer binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/mongodb-binaries
+          key: ${{ runner.os }}-mongodb-binaries-7.0.24
+          restore-keys: |
+            ${{ runner.os }}-mongodb-binaries-
+      
+      # Pre-download MongoDB binary to avoid race condition between shards
+      - name: Pre-download MongoDB binary
+        run: npx mongodb-memory-server-core --download-only
+        env:
+          MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
       
       - name: Run client tests (shard ${{ matrix.shard }})
         run: pnpm vitest run --project=client --shard=${{ matrix.shard }} --reporter=dot --coverage
