fix(ci): Use proper MongoDB Memory Server pre-download command [AGENT-0034]
- Replace invalid 'npx mongodb-memory-server-core --download-only' with proper Node.js script
- Use MongoMemoryServer.create().then(s => s.stop()) to download and cache binary
- Add continue-on-error: true as safety net (cache will handle subsequent shards)

--- a/.github/workflows/ci-full-suite.yml
+++ b/.github/workflows/ci-full-suite.yml
@@ -99,9 +99,10 @@ jobs:
       
       # Pre-download MongoDB binary to avoid race condition between shards
       - name: Pre-download MongoDB binary
-        run: npx mongodb-memory-server-core --download-only
+        run: node -e "const { MongoMemoryServer } = require('mongodb-memory-server'); MongoMemoryServer.create().then(s => s.stop());"
         env:
           MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
+        continue-on-error: true
       
       - name: Run server tests (shard ${{ matrix.shard }})
         run: pnpm vitest run --project=server --shard=${{ matrix.shard }} --reporter=dot --coverage
@@ -153,9 +154,10 @@ jobs:
       
       # Pre-download MongoDB binary to avoid race condition between shards
       - name: Pre-download MongoDB binary
-        run: npx mongodb-memory-server-core --download-only
+        run: node -e "const { MongoMemoryServer } = require('mongodb-memory-server'); MongoMemoryServer.create().then(s => s.stop());"
         env:
           MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
+        continue-on-error: true
       
       - name: Run client tests (shard ${{ matrix.shard }})
         run: pnpm vitest run --project=client --shard=${{ matrix.shard }} --reporter=dot --coverage
