--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -37,9 +37,10 @@ jobs:
 
       # Pre-download MongoDB binary before tests start
       - name: Pre-download MongoDB binary
-        run: npx mongodb-memory-server-core --download-only
+        run: node -e "const { MongoMemoryServer } = require('mongodb-memory-server'); MongoMemoryServer.create().then(s => s.stop());"
         env:
           MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
+        continue-on-error: true
 
       - name: 🔒 Assert non-production MongoDB
         if: ${{ env.MONGODB_URI != '' }}
