--- a/.github/workflows/fixzit-quality-gates.yml
+++ b/.github/workflows/fixzit-quality-gates.yml
@@ -78,6 +78,25 @@ jobs:
               ;;
           esac
 
+      # Cache MongoMemoryServer binaries to prevent race conditions in tests
+      - name: Cache MongoMemoryServer binaries
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/mongodb-binaries
+          key: ${{ runner.os }}-mongodb-binaries-7.0.24
+          restore-keys: |
+            ${{ runner.os }}-mongodb-binaries-
+
+      # Pre-download MongoDB binary before tests start
+      - name: Pre-download MongoDB binary
+        shell: bash
+        run: |
+          node -e "
+            const { MongoBinary } = require('mongodb-memory-server');
+            MongoBinary.getPath().then(p => console.log('MongoDB binary ready:', p)).catch(e => console.log('Download skipped:', e.message));
+          "
+        continue-on-error: true
+
       # ---------- Phase 2 Canonical Rules ----------
       - name: Validate waivers schema
         shell: bash
@@ -199,13 +218,22 @@ jobs:
         shell: bash
         env:
           NODE_ENV: test
+          # Ensure MongoDB binary download directory
+          MONGOMS_DOWNLOAD_DIR: ~/.cache/mongodb-binaries
         run: |
           mkdir -p .artifacts
           status=0
 
           # Run only unit/model tests (E2E tests require environment setup)
-          # Full E2E test suite should be run separately with proper test environment
-          if node -e "const pkg=require('./package.json');process.exit(pkg?.scripts?.['test:models']?0:1)" 2>/dev/null; then
+          # Use test:models:ci script which runs sequentially to avoid race conditions
+          # when downloading MongoDB binaries in parallel
+          if node -e "const pkg=require('./package.json');process.exit(pkg?.scripts?.['test:models:ci']?0:1)" 2>/dev/null; then
+            case "${{ steps.pm.outputs.manager }}" in
+              pnpm) pnpm test:models:ci || status=$? ;;
+              yarn) yarn test:models:ci || status=$? ;;
+              *) npm run test:models:ci || status=$? ;;
+            esac
+          elif node -e "const pkg=require('./package.json');process.exit(pkg?.scripts?.['test:models']?0:1)" 2>/dev/null; then
             case "${{ steps.pm.outputs.manager }}" in
               pnpm) pnpm test:models || status=$? ;;
               yarn) yarn test:models || status=$? ;;
