--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [main, develop]
 
+env:
+  CI_LITE: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'full-ci') }}
+
 # Prevent concurrent runs for same PR/ref
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -79,6 +82,7 @@ jobs:
         run: pnpm typecheck || pnpm tsc --noEmit
 
       - name: Ensure Mongo Indexes (idempotent)
+        if: env.CI_LITE != 'true'
         env:
           MONGODB_URI: ${{ env.MONGODB_URI }}
         run: pnpm tsx -e "import { createIndexes } from './lib/db/collections'; import { getDatabase } from './lib/mongodb-unified'; (async () => { await createIndexes(); await (await getDatabase()).client?.close?.(); })();"
@@ -86,17 +90,24 @@ jobs:
       - name: Run Unit Tests
         run: |
           set -e
-          # Run unit tests with coverage. Fail-fast if both runners fail.
-          if pnpm run test:ci --passWithNoTests 2>/dev/null; then
-            echo "Tests completed successfully"
-          elif pnpm test --passWithNoTests 2>/dev/null; then
-            echo "Tests completed with fallback command"
+          if [ "${CI_LITE}" = "true" ]; then
+            git fetch origin ${{ github.base_ref }} --depth=1
+            pnpm vitest run --changed "origin/${{ github.base_ref }}" \
+              --reporter=dot --passWithNoTests
           else
-            echo "::error::Unit tests failed (test:ci and test fallback both failed)"
-            exit 1
+            # Run unit tests with coverage. Fail-fast if both runners fail.
+            if pnpm run test:ci --passWithNoTests 2>/dev/null; then
+              echo "Tests completed successfully"
+            elif pnpm test --passWithNoTests 2>/dev/null; then
+              echo "Tests completed with fallback command"
+            else
+              echo "::error::Unit tests failed (test:ci and test fallback both failed)"
+              exit 1
+            fi
           fi
 
       - name: Run Auth API Tests
+        if: env.CI_LITE != 'true'
         run: |
           if npm pkg get scripts | grep -q '"test:auth"'; then
             pnpm test:auth --passWithNoTests
@@ -105,6 +116,7 @@ jobs:
           fi
 
       - name: Run Model Tests
+        if: env.CI_LITE != 'true'
         run: |
           if npm pkg get scripts | grep -q '"test:models"'; then
             pnpm test:models
