--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: ["main"]
 
+env:
+  CI_LITE: ${{ github.event_name == 'pull_request' && !contains(github.event.pull_request.labels.*.name, 'full-ci') }}
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
