refactor(ui): Use centralized date formatting utilities in superadmin pages [AGENT-0006]
Per CodeRabbit review comments:
- integrations/page.tsx: Use formatDateTimeLocale instead of inline toLocaleString
- audit/page.tsx: Use formatDateTimeLocale instead of inline toLocaleString
- UserDialogs.tsx: Use formatDateLocale instead of inline toLocaleDateString

Also includes minor Souq claims route type improvements.

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 warnings

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -81,8 +81,14 @@
 				"close": false,
 				"focus": false
 			},
+			"options": {
+				"shell": {
+					"executable": "powershell.exe",
+					"args": ["-NoProfile", "-Command"]
+				}
+			},
 			"problemMatcher": [],
-			"detail": "Start Next.js development server - AUTO-STARTS on folder open"
+			"detail": "Start Next.js development server - AUTO-STARTS on folder open (integrated terminal)"
 		},
 		{
 			"label": "Dev: Restart Server",
