fix: Silent bug audit + Unicode normalization [AGENT-0010]
Silent Bug Audit:
- tests/setup.ts: Fixed mixed tabs/spaces indentation (L77-83, L208)
- tests/api/help/escalate.route.test.ts: Renamed reserved word 'module' to 'moduleValue'
- i18n/new-translations.ts: Fixed truncated file with unterminated string

Unicode Normalization (NFC/NFKC):
- lib/utils.ts: Added NFC to generateSlug() for composed Unicode stability
- lib/payments/parseCartAmount.ts: Added NFKC + Arabic-Indic digit support
- services/souq/vendor-intelligence.ts: NFC + Unicode-aware regex for Arabic
- app/api/search/route.ts: NFC on search query for consistent matching

Vercel CI:
- vercel.json: Deploy only on main branch (git.deploymentEnabled)

SSOT Updated: docs/PENDING_MASTER.md

Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 errors

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,11 @@
   "installCommand": "corepack enable && corepack prepare pnpm@9.15.0 --activate && pnpm install --frozen-lockfile",
   "buildCommand": "pnpm build",
   "outputDirectory": ".next",
+  "git": {
+    "deploymentEnabled": {
+      "main": true
+    }
+  },
   "github": {
     "enabled": true,
     "autoAlias": true,
